Fixed overflow bug and added section on the beautiful implementation of DES that sits quitely on Github

--- a/styles.css
+++ b/styles.css
@@ -104,8 +104,16 @@ a:hover {
 }
 
 .center * {
-	margin:0 0;
-	padding-top: 2em;
+	margin:auto 0;
+	padding-top: 0em;
+}
+
+.title {
+    margin-top: 2vh;
+}
+
+.sub-title {
+    margin-top: 0;
 }
 
 .carousel-item.selected {
